// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VPicker.js should render component with title and match snapshot 1`] = `

<div class="picker card"
     style="height: auto;"
>
  <div class="picker__title primary">
    <span>
      title
    </span>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <span>
      default
    </span>
  </div>
</div>

`;

exports[`VPicker.js should render component without title and match snapshot 1`] = `

<div class="picker card"
     style="height: auto;"
>
  <div class="picker__body"
       style="width: 290px;"
  >
    <span>
      default
    </span>
  </div>
</div>

`;

exports[`VPicker.js should render dark component and match snapshot 1`] = `

<div class="picker card theme--dark"
     style="height: auto;"
>
  <div class="picker__title">
    <span>
      title
    </span>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <span>
      default
    </span>
  </div>
</div>

`;
